# BSCA-Lite-NPASS-DrugBank-Similarity-Search-Engine

./: CMakeLists.txt  README.md
src/: build_enamine_index.cpp  build_sharded_database.cpp  prepare_drugbank.cpp  prepare_enamine.cpp  prepare_npass.cpp  search_annotate.cpp  search_lite.cpp  search_sharded_database.cpp
src/common/: fp_utils.hpp  logger.hpp  mmap_file.hpp  progress.hpp  shard_config.hpp  similarity.hpp  tsv_utils.hpp
src/drugbank/: drugbank_index.hpp  drugbank_types.hpp
src/enamine/: enamine_reader.hpp  offset_store.hpp
src/npass/: npass_index.hpp  npass_types.hpp
